Add read only rootfs support
Can now boot into initramfs init script and from there switch_root
into the full system (tested on a raspberrypi4 machine).

Can now build and boot for both RaspberryPi-4 and BeagleBoneBlack.

Now using u-boot for both RaspberryPi-4 and BeagleBoneBlack.

==========

Config rpi machines to use u-boot

Normally, the raspberry pi machines do not use u-boot as the GPU is able
to load the kernel directly without a higher level bootloader.

Enabling use of u-boot allows using u-boot to select which
kernel+initramfs to load for an A/B+Rescue upgrade process. Machine
specifics can be abstracted away from the kernel and initramfs. Once we
get u-boot to load and run the kernel and initramfs, the boot/upgrade
process should be machine agnostic.

Using u-boot will also allow use of FIT images for kernel/dts/rootfs/etc in
the future.

==========

TODO:

* Need to convert the uEnv.txt to boot.scr for BeagleBoneBlack to be
  consistent with RPi

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -15,6 +15,8 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 
+require conf/machine/openavr-machine-extra.conf
+
 INHERIT += "image-buildinfo"
 
 IMAGE_BUILDINFO_VARS_append = " \
