--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-openavr = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-openavr = "8"
 
 LAYERDEPENDS_meta-openavr = "core"
-LAYERSERIES_COMPAT_meta-openavr = "dunfell"
+LAYERSERIES_COMPAT_meta-openavr = "gatesgarth"
