Add support for BeagleBone AI
This allows the meta-ti tweaks to only come into play when the meta-ti
layer is included in the bblayers.conf file.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,3 +11,18 @@ BBFILE_PRIORITY_meta-openavr = "8"
 
 LAYERDEPENDS_meta-openavr = "core"
 LAYERSERIES_COMPAT_meta-openavr = "hardknott"
+
+# The dynamic-layers directory hosts the extensions and layer specific
+# modifications.
+#
+# The .bbappend and .bb files are included if the respective layer
+# collection is available.
+BBFILES += "${@' '.join('${LAYERDIR}/dynamic-layers/%s/recipes*/*/*.bbappend' % layer \
+               for layer in BBFILE_COLLECTIONS.split())}"
+BBFILES += "${@' '.join('${LAYERDIR}/dynamic-layers/%s/recipes*/*/*.bb' % layer \
+               for layer in BBFILE_COLLECTIONS.split())}"
+
+BBFILES_DYNAMIC += " \
+    meta-ti:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bb \
+    meta-ti:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bbappend \
+"
