--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -18,6 +18,12 @@ IMAGE_BOOT_FILES_append_beaglebone-yocto = "\
     uEnv.txt \
 "
 
+IMAGE_BOOT_FILES_append_beagleboneai = "\
+    zImage-initramfs-${MACHINE}.bin;zImage \
+    am5729-beagleboneai.dtb \
+    uEnv.txt \
+"
+
 IMAGE_BOOT_FILES_append_rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
 
 DISABLE_RPI_BOOT_LOGO_rpi = "1"
