--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -14,3 +14,16 @@ DISTRO_FEATURES_append = " systemd bluez5 wifi"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
+
+INHERIT += "image-buildinfo"
+
+IMAGE_BUILDINFO_VARS_append = " \
+    DISTRO_CODENAME \
+    IMAGE_BASENAME \
+    IMAGE_NAME \
+    MACHINEOVERRIDES \
+    MACHINE_ARCH \
+    SDK_NAME \
+    SUMMARY \
+    USER \
+"
