--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_meta-openavr = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-openavr = "8"
 
 LAYERDEPENDS_meta-openavr = "core"
-LAYERSERIES_COMPAT_meta-openavr = "hardknott"
+LAYERSERIES_COMPAT_meta-openavr = "honister"
 
 # The dynamic-layers directory hosts the extensions and layer specific
 # modifications.
