Convert to new override syntax
Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -10,7 +10,7 @@ SDK_VERSION = "${DISTRO_VERSION}"
 TARGET_VENDOR = "-openavr"
 
 # Enable systemd as our init manager
-DISTRO_FEATURES_append = " systemd bluez5 wifi"
+DISTRO_FEATURES:append = " systemd bluez5 wifi"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
@@ -19,7 +19,7 @@ require conf/machine/openavr-machine-extra.conf
 
 INHERIT += "image-buildinfo"
 
-IMAGE_BUILDINFO_VARS_append = " \
+IMAGE_BUILDINFO_VARS:append = " \
     DISTRO_CODENAME \
     IMAGE_BASENAME \
     IMAGE_NAME \
