--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -1,32 +1,32 @@
 # Override or modify variables from the `${MACHINE}.conf` machine definition file.
 
-WKS_FILE_beaglebone-yocto = "openavr-beaglebone.wks"
+WKS_FILE:beaglebone-yocto = "openavr-beaglebone.wks"
 WKS_FILE = "openavr-sdcard.wks"
 
 # Do not update fstab file when using wic images since mounting is all done in
 # the initramfs.
-WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
+WIC_CREATE_EXTRA_ARGS:append = " --no-fstab-update"
 
 IMAGE_FSTYPES = "squashfs-xz wic.gz wic.bmap"
 
 INITRAMFS_IMAGE = "openavr-image-initramfs"
 INITRAMFS_IMAGE_BUNDLE = "1"
 
-IMAGE_BOOT_FILES_remove_beaglebone-yocto = "zImage"
-IMAGE_BOOT_FILES_append_beaglebone-yocto = "\
+IMAGE_BOOT_FILES:remove:beaglebone-yocto = "zImage"
+IMAGE_BOOT_FILES:append:beaglebone-yocto = "\
     zImage-initramfs-${MACHINE}.bin;zImage \
     uEnv.txt \
 "
 
-IMAGE_BOOT_FILES_append_beagleboneai = "\
+IMAGE_BOOT_FILES:append:beagleboneai = "\
     zImage-initramfs-${MACHINE}.bin;zImage \
     am5729-beagleboneai.dtb \
     uEnv.txt \
 "
 
-IMAGE_BOOT_FILES_append_rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
+IMAGE_BOOT_FILES:append:rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
 
-DISABLE_RPI_BOOT_LOGO_rpi = "1"
-RPI_USE_U_BOOT_rpi = "1"
-ENABLE_UART_rpi = "1"
-CMDLINE_append_rpi = " rdinit=init"
+DISABLE_RPI_BOOT_LOGO:rpi = "1"
+RPI_USE_U_BOOT:rpi = "1"
+ENABLE_UART:rpi = "1"
+CMDLINE:append:rpi = " rdinit=init"
