--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -15,6 +15,9 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 
+PACKAGE_CLASSES = "package_ipk"
+NO_RECOMMENDATIONS = "1"
+
 require conf/machine/openavr-machine-extra.conf
 
 INHERIT += "image-buildinfo"
