Disable rpi splash and remove unneeded cmdline args
Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -26,7 +26,11 @@ IMAGE_BOOT_FILES:append:beagleboneai = "\
 
 IMAGE_BOOT_FILES:append:rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
 
+CMDLINE_ROOT_FSTYPE:rpi = ""
+CMDLINE_ROOTFS:rpi = ""
+
 DISABLE_RPI_BOOT_LOGO:rpi = "1"
+DISABLE_SPLASH:rpi = "1"
 RPI_USE_U_BOOT:rpi = "1"
 ENABLE_UART:rpi = "1"
 CMDLINE:append:rpi = " rdinit=init"
