u-boot: Use boot.scr instead of uEnv.txt
The old uEnv.txt u-boot script was no longer working with the beaglebone
black since the update to honister/main.

Convert to using a boot.scr u-boot script for beaglebone black and AI
boards which actually makes things a bit simpler.

There is still some duplicated code that needs to be cleaned up for
better maintainability.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -15,13 +15,13 @@ INITRAMFS_IMAGE_BUNDLE = "1"
 IMAGE_BOOT_FILES:remove:beaglebone-yocto = "zImage"
 IMAGE_BOOT_FILES:append:beaglebone-yocto = "\
     zImage-initramfs-${MACHINE}.bin;zImage \
-    uEnv.txt \
+    boot.scr \
 "
 
 IMAGE_BOOT_FILES:append:beagleboneai = "\
     zImage-initramfs-${MACHINE}.bin;zImage \
     am5729-beagleboneai.dtb \
-    uEnv.txt \
+    boot.scr \
 "
 
 IMAGE_BOOT_FILES:append:rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
