rpi: Fix boot failure when running headless
When booting without a monitor connected to the HDMI port, the boot
fails because the first stage boot loader does not load the FDT file and
u-boot fails when running the `fdt addr ${fdt_addr}` command in the
boot.scr script.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -34,4 +34,18 @@ DISABLE_SPLASH:rpi = "1"
 RPI_USE_U_BOOT:rpi = "1"
 ENABLE_UART:rpi = "1"
 CMDLINE:append:rpi = " rdinit=init"
+
+# Without this, the `fdt addr ${fdt_addr}` command fails in u-boot
+# when no hdmi display is connected (running headless).
+HDMI_FORCE_HOTPLUG:rpi = "1"
+
+# group: DMT
+HDMI_GROUP:rpi = "2"
+
+# mode: 1920x1200 60Hz
+#HDMI_MODE:rpi = "69"
+
+# mode: 1080p 60Hz
+HDMI_MODE:rpi = "82"
+
 #CMDLINE:append = " debug-openavr-init"
