Make DEBUG_OPENAVR_INIT machine independent
This change allows breaking into the init script on all supported
machines.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -1,4 +1,5 @@
-# Override or modify variables from the `${MACHINE}.conf` machine definition file.
+# Override or modify variables from the `${MACHINE}.conf` machine definition
+# file.
 
 WKS_FILE:beaglebone-yocto = "openavr-beaglebone.wks"
 WKS_FILE = "openavr-sdcard.wks"
@@ -33,7 +34,7 @@ DISABLE_RPI_BOOT_LOGO:rpi = "1"
 DISABLE_SPLASH:rpi = "1"
 RPI_USE_U_BOOT:rpi = "1"
 ENABLE_UART:rpi = "1"
-CMDLINE:append:rpi = " rdinit=init"
+CMDLINE:append:rpi = " rdinit=init ${DEBUG_OPENAVR_INIT}"
 
 # Without this, the `fdt addr ${fdt_addr}` command fails in u-boot
 # when no hdmi display is connected (running headless).
@@ -47,5 +48,3 @@ HDMI_GROUP:rpi = "2"
 
 # mode: 1080p 60Hz
 HDMI_MODE:rpi = "82"
-
-#CMDLINE:append = " debug-openavr-init"
