--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -15,6 +15,10 @@ VIRTUAL-RUNTIME_initscripts = ""
 PACKAGE_CLASSES = "package_ipk"
 NO_RECOMMENDATIONS = "1"
 
+# Set `DEBUG_OPENAVR_INIT = "debug-openavr-init"` in local.conf to enable
+# stopping in the middle of the initrd before pivoting into the main rootfs.
+DEBUG_OPENAVR_INIT ?= ""
+
 require conf/machine/openavr-machine-extra.conf
 
 INHERIT += "image-buildinfo"
