--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -12,6 +12,10 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 
+KERNEL_FEATURES:append = "\
+    features/device-mapper/dm-verity.scc \
+"
+
 PACKAGE_CLASSES = "package_ipk"
 NO_RECOMMENDATIONS = "1"
 
