--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -23,6 +23,6 @@ BBFILES += "${@' '.join('${LAYERDIR}/dynamic-layers/%s/recipes*/*/*.bb' % layer 
                for layer in BBFILE_COLLECTIONS.split())}"
 
 BBFILES_DYNAMIC += " \
-    meta-ti:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bb \
-    meta-ti:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bbappend \
+    meta-ti-bsp:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bb \
+    meta-ti-bsp:${LAYERDIR}/dynamic-layers/meta-ti/*/*/*.bbappend \
 "
