--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -7,9 +7,9 @@ SDK_VENDOR = "-openavr"
 TARGET_VENDOR = "-openavr"
 
 # Enable systemd as our init manager
-DISTRO_FEATURES:append = " systemd bluez5 wifi"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
-VIRTUAL-RUNTIME_init_manager = "systemd"
+INIT_MANAGER = "systemd"
+
+DISTRO_FEATURES:append = " bluez5 wifi"
 VIRTUAL-RUNTIME_initscripts = ""
 
 KERNEL_FEATURES:append = "\
