distro: Remove unused distro features
Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/conf/distro/openavr.conf
+++ b/conf/distro/openavr.conf
@@ -12,6 +12,15 @@ INIT_MANAGER = "systemd"
 DISTRO_FEATURES:append = " bluez5 wifi"
 VIRTUAL-RUNTIME_initscripts = ""
 
+DISTRO_FEATURES:remove = " \
+    x11 \
+    opengl \
+    wayland \
+    vulkan \
+    alsa \
+    pulseaudio \
+"
+
 KERNEL_FEATURES:append = "\
     features/device-mapper/dm-verity.scc \
 "
