--- a/conf/machine/openavr-machine-extra.conf
+++ b/conf/machine/openavr-machine-extra.conf
@@ -25,6 +25,16 @@ IMAGE_BOOT_FILES:append:beagleboneai = "\
     boot.scr \
 "
 
+IMAGE_BOOT_FILES:append:beaglebone-ai64 = "\
+    Image-initramfs-${MACHINE}.bin;Image \
+    k3-j721e-beagleboneai64.dtb;ti/k3-j721e-beagleboneai64.dtb \
+    k3-j721e-common-proc-board.dtb;ti/k3-j721e-common-proc-board.dtb \
+    k3-j721e-proc-board-tps65917.dtb;ti/k3-j721e-proc-board-tps65917.dtb \
+    k3-j721e-sk.dtb;ti/k3-j721e-sk.dtb \
+    u-boot.dtb \
+    boot.scr \
+"
+
 IMAGE_BOOT_FILES:append:rpi = " uImage-initramfs-${MACHINE}.bin;uImage"
 
 CMDLINE_ROOT_FSTYPE:rpi = ""
